<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editFoto"
                android:background="@drawable/select_setting_header">
                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp">
                    <com.github.siyamed.shapeimageview.CircularImageView
                        android:id="@+id/imageProfile"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:siBorderWidth="1dp"
                        app:siBorderAlpha="0.7"
                        app:siBorderColor="#888e8c"
                        app:siRadius="8dp"
                        android:src="@drawable/facebook"
                        android:alpha="1"/>
                    <Button
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_camera_mini"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/editNomorTelepon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:layout_marginLeft="15dp"
                android:orientation="vertical">
                <customfonts.TextViewSFProDisplayMedium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:text="Phone"/>
                <customfonts.TextViewSFProDisplayMedium
                    android:id="@+id/textNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="19dp"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greytext" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editNama"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_edittext_dark"
            android:clickable="false"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <customfonts.TextViewSFProDisplayMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:text="@string/edit_name"/>
            <customfonts.TextViewSFProDisplayRegular
                android:id="@+id/textNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:text="Gagah Istaid Billah"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_edittext_dark"
            android:clickable="false"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <customfonts.TextViewSFProDisplayMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:text="@string/change_email"/>
            <customfonts.TextViewSFProDisplayRegular
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:text="GagahIB@outlook.com"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_edittext_dark"
            android:clickable="false"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">>
            <customfonts.TextViewSFProDisplayMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:text="@string/change_password"/>
            <customfonts.TextViewSFProDisplayRegular
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:text="123****"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editRekening"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_edittext_dark"
            android:clickable="false"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <customfonts.TextViewSFProDisplayMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:text="@string/change_account"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editKendaraan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_edittext_dark"
            android:clickable="false"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <customfonts.TextViewSFProDisplayRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:text="@string/detail_transport"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_button"
            android:clickable="false"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <customfonts.TextViewSFProDisplayMedium
                android:id="@+id/textLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="15dp"
                android:text="@string/text_logout"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>


