<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <fragment
        android:id="@+id/mapOrder"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <customfonts.TextViewSFProDisplayMedium
            android:id="@+id/textStatus"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/black"
            android:gravity="center"
            android:text="Status : Menuju Penjemputan"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="italic"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="110dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:ignore="MissingPrefix">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <View
                android:layout_width="30dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/greytext"
                android:background="@drawable/rounded_corners_button"/>


      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="net.balqisstudio.goeksdriver.MainActivity">

    <customfonts.TextViewSFProDisplayMedium
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/text_infopesanan"
        android:textColor="@color/black"
        android:textSize="20dp"/>
          <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/greytext" />
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <customfonts.TextViewSFProDisplayMedium
            android:id="@+id/callPelanggan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Call"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:checked="true"/>




        <customfonts.TextViewSFProDisplayMedium
            android:id="@+id/pickUpPelanggan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="Start"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners_button"
            android:textAllCaps="true"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <customfonts.TextViewSFProDisplayMedium
            android:id="@+id/chatPelanggan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="Chat"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="15sp"/>
    </LinearLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorAccent"
              android:gravity="top"
              android:orientation="vertical">
              <View
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/greytext" />
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="80dp"
                  android:layout_weight="5"
                  android:background="@color/white"
                  android:orientation="horizontal">

                 <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:layout_marginLeft="15dp"
                      android:gravity="center_vertical"
                      android:orientation="vertical">

                     <customfonts.TextViewSFProDisplayMedium
                          android:id="@+id/textView"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/name_customer"
                          android:textColor="@color/black"
                          android:textSize="15dp"
                          android:visibility="gone"/>

                      <customfonts.TextViewSFProDisplayMedium
                          android:id="@+id/namaPelanggan"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Andika Pratama"
                          android:textColor="@color/black"
                          android:textSize="18dp" />
                      <customfonts.TextViewSFProDisplayRegular
                          android:id="@+id/idOrder"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center_vertical"
                          android:text="123123123"
                          android:textColor="@color/blue"
                          android:textSize="12dp" />



                  </LinearLayout>
                  <View
                      android:layout_width="1dp"
                      android:layout_height="match_parent"
                      android:background="@color/greytext" />
                  <LinearLayout
                      android:layout_width="80dp"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

                      <ImageView
                          android:id="@+id/logoOrder"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:padding="5dp"
                          android:src="@mipmap/pro_motor" />

                  </LinearLayout>
              </LinearLayout>
              <View
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/greytext" />

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:layout_weight="4"
                  android:orientation="horizontal">

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:background="@color/white"
                      android:gravity="center"
                      android:orientation="vertical">

                      <customfonts.TextViewSFProDisplayRegular
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:gravity="center"
                          android:text="@string/text_cash"
                          android:textColor="@color/black" />

                      <customfonts.TextViewSFProDisplayMedium
                          android:id="@+id/textTunai"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:gravity="center"
                          android:text="Rp 10.000,-"
                          android:textColor="@color/black" />
                  </LinearLayout>
                  <View
                      android:layout_width="1dp"
                      android:layout_height="match_parent"
                      android:background="@color/greytext" />
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:background="@color/white"
                      android:gravity="center"
                      android:orientation="vertical">

                      <customfonts.TextViewSFProDisplayRegular
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:gravity="center"
                          android:text="@string/text_credit"
                          android:textColor="@color/black" />

                      <customfonts.TextViewSFProDisplayMedium
                          android:id="@+id/textCredit"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:gravity="center"
                          android:text="Rp 10.000,-"
                          android:textColor="@color/red" />
                  </LinearLayout>
              </LinearLayout>
          </LinearLayout>
          <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/greytext" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="@color/white">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_loc_orange" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <customfonts.TextViewSFProDisplayRegular
                    android:id="@+id/alamatJemput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:paddingRight="10dp"
                    android:text="Jalan Mandasia"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <customfonts.TextViewSFProDisplayRegular
                    android:id="@+id/alamatAsalDetail"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textColor="@color/blue"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="8dp"
                    android:gravity="left|top"
                    android:layout_gravity="center"
                    android:text="RT:08 / RW:III"
                    android:visibility="gone"/>
            </LinearLayout>


        </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:background="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_loc_orange"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:tint="@color/blue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <customfonts.TextViewSFProDisplayRegular
                    android:id="@+id/alamatAntar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="15dp"
                    android:gravity="center_vertical|left"
                    android:layout_gravity="center"
                    android:text="Jalan Mandasia"/>
                <customfonts.TextViewSFProDisplayRegular
                    android:id="@+id/alamatJemputDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left|top"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="Sebelah utaranya Masjid Muawannah"
                    android:textColor="@color/black"
                    android:textSize="8dp"
                    android:visibility="gone"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
            </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

